emoji-z-index-fixed

--- a/src/pages/Dashboard/components/comments/commentsModal.scss
+++ b/src/pages/Dashboard/components/comments/commentsModal.scss
@@ -60,7 +60,7 @@
         position: absolute;
         top: 4.3rem;
         right: 4rem;
-        z-index: 1;
+        z-index: 11;
     }
 
     .emoji-modal {
