--- a/src/pages/Dashboard/components/posts/createPost.scss
+++ b/src/pages/Dashboard/components/posts/createPost.scss
@@ -2,7 +2,7 @@
     width: 43rem;
     border-radius: 3rem;
     margin-top: 3rem;
-    
+    box-shadow: 0rem 0rem 1rem 0rem #272727;
 
     .create-top {
         display: flex;
