--- a/src/pages/Dashboard/components/replies/createReply.scss
+++ b/src/pages/Dashboard/components/replies/createReply.scss
@@ -54,7 +54,7 @@
             position: absolute;
             top: 5.6rem;
             right: 2.4rem;
-            z-index: 1;
+            z-index: 11;
         }
     }
 }
